added pdf-to-word and contact pages

--- a/business-name-gen.html
+++ b/business-name-gen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Business Name Generator</title>
+  <title>Business Name Generator | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -13,8 +13,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="pdf-to-word.html">PDF to Word Converter</a></li>
       <li><a href="business-name-gen.html" class="active">Business Name Generator</a></li>
-      <li><a href="#">Account</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="contact-page.html">Contact Us</a></li>
     </ul>
   </nav>
   <main>
