--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Website</title>
+  <title>Home | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -13,8 +13,7 @@
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="pdf-to-word.html">PDF to Word Converter</a></li>
       <li><a href="business-name-gen.html">Business Name Generator</a></li>
-      <li><a href="#">Account</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="contact-page.html">Contact Us</a></li>
     </ul>
   </nav>
   <main>
