fixed highlight link on pdftoword

--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -11,8 +11,8 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="pdf-to-word.html">PDF to Word Converter</a></li>
-      <li><a href="business-name-gen.html" class="active">Business Name Generator</a></li>
+      <li><a href="pdf-to-word.html" class="active">PDF to Word Converter</a></li>
+      <li><a href="business-name-gen.html">Business Name Generator</a></li>
       <li><a href="contact-page.html">Contact Us</a></li>
     </ul>
   </nav>
