removed reliance on php

--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -3,6 +3,7 @@
 <head>
   <title>Business Name Generator | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.2.0/jspdf.umd.min.js"></script>
 </head>
 <body>
   <header>
@@ -13,7 +14,6 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="pdf-to-word.html" class="active">PDF to Word Converter</a></li>
       <li><a href="business-name-gen.html">Business Name Generator</a></li>
-      <li><a href="contact-page.html">Contact Us</a></li>
     </ul>
   </nav>
   <main>
