--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.2.0/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
   <title>Business Name Generator | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
