refactored file structure

--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
   <title>Business Name Generator | Utility Central</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.cs">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+  <script src="scripts/convert.js"></script>
 </head>
 <body>
   <header>
@@ -30,6 +31,5 @@
   <footer>
     <p>Copyright 2023 Utility Central</p>
   </footer>
-  <script src="script.js"></script>
 </body>
 </html>
