--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
   <title>Home | Utility Central</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.cs">
 </head>
 <body>
   <header>
@@ -32,6 +31,5 @@
   <footer>
     <p>Copyright 2023 Utility Central</p>
   </footer>
-  <script src="script.js"></script>
 </body>
 </html>
