--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Home | Utility Central</title>
-  <link rel="stylesheet" type="text/css" href="styles/styles.cs">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
   <header>
