--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Business Name Generator | Utility Central</title>
-  <link rel="stylesheet" type="text/css" href="styles/styles.cs">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
   <script src="scripts/convert.js"></script>
 </head>
