--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -3,7 +3,7 @@
 <head>
   <title>Business Name Generator | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docxgen@1.3.6/dist/docxgen.min.js"></script>
   <script src="scripts/convert.js"></script>
 </head>
 <body>
