--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Business Name Generator | Utility Central</title>
+  <title>PDF to Word Converter | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <script src="https://cdn.jsdelivr.net/npm/docxgen@1.3.6/dist/docxgen.min.js"></script>
   <script src="scripts/convert.js"></script>
 </head>
 <body>
   <header>
-    <h1>Business Name Generator</h1>
+    <h1>PDF to Word Converter</h1>
   </header>
   <nav>
     <ul>
