added google tags

--- a/business-name-gen.html
+++ b/business-name-gen.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EJLVZQWT4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9EJLVZQWT4');
+  </script>
   <title>Business Name Generator | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
