--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EJLVZQWT4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9EJLVZQWT4');
+  </script>
   <title>Home | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
