added qr code generator

--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -22,16 +22,17 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="pdf-to-word.html" class="active">PDF to Word Converter</a></li>
       <li><a href="business-name-gen.html">Business Name Generator</a></li>
+      <li><a href="qr-code-gen.html">QR Code Generator</a></li>
     </ul>
   </nav>
   <main>
-    <h2>Convert your file by uploading your PDF file below and hitting convert!</h2>
-    <form id="converter-form">
+    <h2>UNDER CONSTRUCTION</h2>
+    <!-- <form id="converter-form">
       <input type="file" id="pdf-file" accept=".pdf">
       <button type="submit">Convert</button>
     </form>
     <a id="download-link" style="display: none;">Download DOCX</a>
-  </main>
+  </main> -->
   <footer>
     <p>Copyright 2023 Utility Central</p>
   </footer>
