--- a/business-name-gen.html
+++ b/business-name-gen.html
@@ -23,6 +23,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="pdf-to-word.html">PDF to Word Converter</a></li>
       <li><a href="business-name-gen.html" class="active">Business Name Generator</a></li>
+      <li><a href="qr-code-gen.html">QR Code Generator</a></li>
     </ul>
   </nav>
   <main>
@@ -36,6 +37,5 @@
   <footer>
     <p>Copyright 2023 Utility Central</p>
   </footer>
-  <script src="script.js"></script>
 </body>
 </html>
