--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="pdf-to-word.html">PDF to Word Converter</a></li>
       <li><a href="business-name-gen.html">Business Name Generator</a></li>
+      <li><a href="qr-code-gen.html">QR Code Generator</a></li>
     </ul>
   </nav>
   <main>
@@ -34,6 +35,11 @@
       <h3>Business Name Generator</h3>
       <p>Get creative and unique ideas for your business name.</p>
       <button onclick="location.href='business-name-gen.html'">Try it now</button>
+    </div>
+    <div class="tool">
+      <h3>Business Name Generator</h3>
+      <p>Effortlessly generate a QR Code from any given URL.</p>
+      <button onclick="location.href='qr-code-gen.html'">Try it now</button>
     </div>
   </main>
   <footer>
