--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <button onclick="location.href='business-name-gen.html'">Try it now</button>
     </div>
     <div class="tool">
-      <h3>Business Name Generator</h3>
+      <h3>QR Code Generator</h3>
       <p>Effortlessly generate a QR Code from any given URL.</p>
       <button onclick="location.href='qr-code-gen.html'">Try it now</button>
     </div>
