added plagiarism detector

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="pdf-to-word.html">PDF to Word Converter</a></li>
       <li><a href="business-name-gen.html">Business Name Generator</a></li>
       <li><a href="qr-code-gen.html">QR Code Generator</a></li>
+      <li><a href="plagiarism-detect.html">Plagiarism Detector</a></li>
     </ul>
   </nav>
   <main>
@@ -40,6 +41,11 @@
       <h3>QR Code Generator</h3>
       <p>Effortlessly generate a QR Code from any given URL.</p>
       <button onclick="location.href='qr-code-gen.html'">Try it now</button>
+    </div>
+    <div class="tool">
+      <h3>Plagiarism Detector</h3>
+      <p>Figure out if your text is clean or not.</p>
+      <button onclick="location.href='plagiarism-detect.html'">Try it now</button>
     </div>
   </main>
   <footer>
