--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -23,6 +23,7 @@
       <li><a href="pdf-to-word.html" class="active">PDF to Word Converter</a></li>
       <li><a href="business-name-gen.html">Business Name Generator</a></li>
       <li><a href="qr-code-gen.html">QR Code Generator</a></li>
+      <li><a href="plagiarism-detect.html">Plagiarism Detector</a></li>
     </ul>
   </nav>
   <main>
