--- a/qr-code-gen.html
+++ b/qr-code-gen.html
@@ -24,6 +24,7 @@
       <li><a href="pdf-to-word.html">PDF to Word Converter</a></li>
       <li><a href="business-name-gen.html">Business Name Generator</a></li>
       <li><a href="qr-code-gen.html" class="active">QR Code Generator</a></li>
+      <li><a href="plagiarism-detect.html">Plagiarism Detector</a></li>
     </ul>
   </nav>
   <main>
