--- a/index.html
+++ b/index.html
@@ -27,25 +27,29 @@
   </nav>
   <main>
     <h2>Featured Tools:</h2>
-    <div class="tool">
-      <h3>PDF to Word Converter</h3>
-      <p>Easily convert PDF documents to editable Word files.</p>
-      <button onclick="location.href='pdf-to-word.html'">Try it now</button>
+    <div class="tool-container">
+      <div class="tool">
+        <h3>PDF to Word Converter</h3>
+        <p>Easily convert PDF documents to editable Word files.</p>
+        <button onclick="location.href='pdf-to-word.html'">Try it now</button>
+      </div>
+      <div class="tool">
+        <h3>Business Name Generator</h3>
+        <p>Get creative and unique ideas for your business name.</p>
+        <button onclick="location.href='business-name-gen.html'">Try it now</button>
+      </div>
     </div>
-    <div class="tool">
-      <h3>Business Name Generator</h3>
-      <p>Get creative and unique ideas for your business name.</p>
-      <button onclick="location.href='business-name-gen.html'">Try it now</button>
-    </div>
-    <div class="tool">
-      <h3>QR Code Generator</h3>
-      <p>Effortlessly generate a QR Code from any given URL.</p>
-      <button onclick="location.href='qr-code-gen.html'">Try it now</button>
-    </div>
-    <div class="tool">
-      <h3>Plagiarism Detector</h3>
-      <p>Figure out if your text is clean or not.</p>
-      <button onclick="location.href='plagiarism-detect.html'">Try it now</button>
+    <div class="tool-container">
+      <div class="tool">
+        <h3>QR Code Generator</h3>
+        <p>Effortlessly generate a QR Code from any given URL.</p>
+        <button onclick="location.href='qr-code-gen.html'">Try it now</button>
+      </div>
+      <div class="tool">
+        <h3>Plagiarism Detector</h3>
+        <p>Figure out whether your text is clean or not.</p>
+        <button onclick="location.href='plagiarism-detect.html'">Try it now</button>
+      </div>
     </div>
   </main>
   <footer>
