hibernated converter and plagiarism pages until further notice

--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -11,8 +11,6 @@
   </script>
   <title>PDF to Word Converter | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.4.456/pdf.min.js"></script>
-  <script src="pdf-to-word-worker/index.js"></script>
 </head>
 <body>
   <header>
@@ -28,36 +26,8 @@
     </ul>
   </nav>
   <main>
-    <h2>Upload and convert your PDF file here:</h2>
-    <form id="converter-form">
-      <input type="file" id="pdf-file" accept=".pdf">
-      <button type="submit">Convert</button>
-    </form>
-    <a id="download-link" style="display: none;">Download DOCX</a>
+    <h2>UNDER CONSTRUCTION</h2>
   </main>
-  <script>
-    const form = document.getElementById('converter-form');
-    form.addEventListener('submit', (event) => {
-      event.preventDefault();
-  
-      // Get the selected PDF file
-      const pdfFile = document.getElementById('pdf-file').files[0];
-  
-      // Trigger the fetch event with the PDF file as the request body
-      fetch(new Request('/', {
-        method: 'POST',
-        body: pdfFile,
-      })).then((response) => {
-        // Create an object URL for the DOCX Blob
-        const objectUrl = URL.createObjectURL(response.blob());
-
-        // Update the "download-link" element with the object URL
-        const downloadLink = document.getElementById('download-link');
-        downloadLink.href = objectUrl;
-        downloadLink.style.display = 'inline';
-      });
-    });
-  </script>
   <footer>
     <p>Copyright 2023 Utility Central</p>
   </footer>
