--- a/plagiarism-detect.html
+++ b/plagiarism-detect.html
@@ -11,7 +11,6 @@
   </script>
   <title>QR Code Generator | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
-  <script src="scripts/plag-detect.js"></script>
 </head>
 <body>
   <header>
@@ -27,15 +26,7 @@
     </ul>
   </nav>
   <main>
-    <h2>Check for plagiarism:</h2>
-    <form>
-      <label for="textInput">Enter text to check for plagiarism:</label>
-      <br>
-      <textarea id="textInput" rows="4" cols="50"></textarea>
-      <br>
-      <input type="button" value="Check for Plagiarism" onclick="checkPlagiarism()">
-    </form>
-    <div id="results"></div>
+    <h2>UNDER CONSTRUCTION</h2>
   </main>
   <footer>
     <p>Copyright 2023 Utility Central</p>
