--- a/plagiarism-detect.html
+++ b/plagiarism-detect.html
@@ -9,12 +9,12 @@
 
     gtag('config', 'G-9EJLVZQWT4');
   </script>
-  <title>QR Code Generator | Utility Central</title>
+  <title>Plagiarism Detector | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
   <header>
-    <h1>QR Code Generator</h1>
+    <h1>Plagiarism Detector</h1>
   </header>
   <nav>
     <ul>
