--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EJLVZQWT4"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-9EJLVZQWT4');
   </script>
   <title>PDF to Word Converter | Utility Central</title>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <script src="scripts/converter.js"></script>
 </head>
+
 <body>
   <header>
     <h1>PDF to Word Converter</h1>
@@ -26,10 +29,18 @@
     </ul>
   </nav>
   <main>
-    <h2>UNDER CONSTRUCTION</h2>
+    <h2>Use this form to convert a PDF file to a Microsoft Word file:</h2>
+    <form id="converter-form">
+      <label for="file">Select a PDF file:</label><br>
+      <input type="file" id="file" name="file"><br>
+      <button type="submit">Convert</button>
+    </form>
+    <p id="status"></p>
+    <a id="download" style="display: none;">Download Word File</a>
   </main>
   <footer>
     <p>Copyright 2023 Utility Central</p>
   </footer>
 </body>
+
 </html>
